before json submodule adding

--- a/application/imgui.ini
+++ b/application/imgui.ini
@@ -1,17 +1,18 @@
 [Window][Debug##Default]
-Pos=68,152
+ViewportPos=108,620
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1436,522
+ViewportPos=1773,293
 ViewportId=0xA4D966FE
 Size=550,423
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Settings]
-ViewportPos=1436,522
+ViewportPos=1773,293
 ViewportId=0xA4D966FE
 Pos=0,425
 Size=550,255
@@ -19,7 +20,7 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1436,522 Size=550,680 Split=Y
+DockNode    ID=0x00000001 Pos=1773,293 Size=550,680 Split=Y
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=550,423 Selected=0xE87781F4
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=550,255 Selected=0x54723243
 
